# traintime-api

./: .dev.vars.example  Cargo.toml  README.md  wrangler.toml
.github/workflows/: update-stations.yml
migrations/: 0001_create_stations.sql
scripts/: fetch-stations.sh  seed_d1.sh
src/: formation.rs  lib.rs  ojp.rs  stations.rs
src/data/: ATTRIBUTION
src/routes/: departures.rs  formation.rs  mod.rs  nearby.rs
tests/: e2e.sh
