[package]
name = "traintime-api"
version = "0.1.0"
edition = "2021"
authors = ["Evan Thomas <evan@evanjt.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'axum'] }
worker-macros = { version = "0.7", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
